[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gas_agent"]

[project]
name = "gas-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.1.0",
    "openpyxl>=3.1.0",
    "dotenv>=0.9.9",
    "isort>=7.0.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.7",
    "python-dotenv>=1.2.1",
    "tavily>=1.1.0",
]

[tool.uv.sources]

[project.scripts]
gas-agent = "gas_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]
